Corrected 'off center' intro

--- a/css/styler/style.less
+++ b/css/styler/style.less
@@ -689,15 +689,17 @@ body {
 /* CURRFIT */
 /*-------------------------------------------------------------------------*/
 @media (min-width:980px) and (max-width:1200px) {
-    .container{width:1050px;}
     .pricing {
-        ul.pricing-list {
-            &.pricing1 {
-                > li {
-                    margin:0 0 15px 15px;
-                    width:240px;
-                }
-            }
+        .container{
+           width: 1000px !important;
+           ul.pricing-list {
+               &.pricing1 {
+                   > li {
+                       margin:0 0 15px 15px;
+                       width:240px;
+                   }
+               }
+           }
         }
     }
 }
